# argparse-class-namespace

./: pyproject.toml  test.py
src/argparse_class_namespace/: __init__.py
src/argparse_class_namespace/core/: __init__.py  base_wrapper.py  group_wrapper.py  help_formatter.py  mixin.py  namespace_wrapper.py  variable_docstring.py
