[project]
name = "argparse_class_namespace"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ikeda", email = "ikeda@lee-lab.org" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
