[project]
name = "argparse_class_namespace"
dynamic = ["version"]
# version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ikeda", email = "ikeda@lee-lab.org" }
]
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=3.6.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
